--- a/WordChainGame_01/MainWindow.xaml
+++ b/WordChainGame_01/MainWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="WordChainGame_01.MainWindow"
+﻿<Window x:Name="Window_01" x:Class="WordChainGame_01.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WordChainGame_01"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Visibility="Visible">
     <Grid>
-        
+        <Button Content="Button" HorizontalAlignment="Left" Margin="254,164,0,0" VerticalAlignment="Top" Width="228" Click="Clicked"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="277,239,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
     </Grid>
 </Window>
