--- a/WordChainGame_01/App.xaml
+++ b/WordChainGame_01/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WordChainGame_01"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Window_Start.xaml">
     <Application.Resources>
          
     </Application.Resources>
