--- a/WordChainGame_01/Window_Start.xaml
+++ b/WordChainGame_01/Window_Start.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Window_Start" Height="450" Width="800">
     <Grid>
-        <Button Content="Back to main" HorizontalAlignment="Left" Margin="323,177,0,0" VerticalAlignment="Top" Width="126" Click="Clicked"/>
+        <Button x:Name="Play" Content="Play" HorizontalAlignment="Left" Margin="323,177,0,0" VerticalAlignment="Top" Width="126" Click="Clicked"/>
 
     </Grid>
 </Window>
