--- a/WordChainGame_01/Window_Game.xaml
+++ b/WordChainGame_01/Window_Game.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="Window_Game" Height="450" Width="800">
     <Grid>
-        <Button x:Name="Back_to_Title" Content="Back to Title" HorizontalAlignment="Left" Margin="427,185,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button x:Name="Back_to_Title" Content="Back to Title" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <DataGrid x:Name="WordLists" HorizontalAlignment="Left" Height="100" Margin="160,99,0,0" VerticalAlignment="Top" Width="472"/>
 
     </Grid>
 </Window>
